[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = "0.13.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
