[package]
name = "void"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
futures-util = "0.3"
pulldown-cmark = "0.9"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
syntect = "5"
tokio = { version = "1", features = ["full"] }
